--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
-  "name": "angular-panhandler",
-  "version": "1.2.0",
+  "name": "angular-pannable",
+  "version": "1.0.0",
   "authors": [
     "Nathan Bleigh <nathan.bleigh@gmail.com>",
     "Loknath Bharti <lbharti@gmail.com"
   ],
   "description": "Drag to Pan DOM Element Descendants",
-  "main": ["dist/angular-panhandler.js","dist/angular-panhandler.min.js"],
+  "main": ["dist/angular-pannable.js","dist/angular-pannable.min.js"],
   "keywords": [
     "angular",
     "pan",
